# wtl_samples

./: CMakeLists.txt  README.md
cmake/: FindWTL.cmake
modules/notebook/: CMakeLists.txt
modules/notebook/include/: CAdd.h  CMain.h  Friend.h  FriendManager.h  resource.h  targetver.h
modules/notebook/src/: CAdd.cpp  CMain.cpp  Friend.cpp  FriendManager.cpp  main.cpp  pch.h
modules/notebook/src/res/: Notebook.rc.cmake  Version.rc.cmake
modules/tray-agent/: CMakeLists.txt
modules/tray-agent/include/: App.h  Resource.h  TrayIcon.h  Utils.h
modules/tray-agent/src/: App.cpp  TrayIcon.cpp  main.cpp  pch.h
modules/tray-agent/src/res/: Version.h.cmake  tray_agent.rc.cmake
script/: build.cmd  cmakegen-vc14-x64-debug.cmd  cmakegen-vc14-x64-release.cmd  cmakegen-vc14-x86-debug.cmd  cmakegen-vc14-x86-release.cmd
